figured out the links that should be fixed on mobile devices

--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1467,7 +1467,7 @@
             width: 230px;
         }
         &__coach:hover {
-            transform: translateY(-15px);
+            transform: none;
         }
     }
 
